--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Set up Python 3
       uses: actions/setup-python@v4
       with:
-        python-version: "3.x"
+        python-version: "3.10"
     - name: Get CP deps
       run: python tools/ci_fetch_deps.py test ${{ github.sha }}
     - name: CircuitPython version
@@ -156,7 +156,7 @@ jobs:
     - name: Set up Python 3
       uses: actions/setup-python@v4
       with:
-        python-version: "3.x"
+        python-version: "3.10"
     - name: Get CP deps
       run: python tools/ci_fetch_deps.py mpy-cross-mac ${{ github.sha }}
     - name: CircuitPython version
@@ -220,7 +220,7 @@ jobs:
     - name: Set up Python 3
       uses: actions/setup-python@v4
       with:
-        python-version: "3.x"
+        python-version: "3.10"
     - name: Install dependencies
       run: |
         sudo apt-get update
@@ -278,7 +278,7 @@ jobs:
     - name: Set up Python 3
       uses: actions/setup-python@v4
       with:
-        python-version: "3.x"
+        python-version: "3.10"
     - uses: actions/checkout@v3
       with:
         submodules: false
@@ -331,7 +331,7 @@ jobs:
     - name: Set up Python 3
       uses: actions/setup-python@v4
       with:
-        python-version: "3.x"
+        python-version: "3.10"
     - uses: actions/checkout@v3
       with:
         submodules: false
@@ -384,7 +384,7 @@ jobs:
       id: py3
       uses: actions/setup-python@v4
       with:
-        python-version: "3.x"
+        python-version: "3.10"
     - uses: actions/checkout@v3
       with:
         submodules: false
@@ -473,7 +473,7 @@ jobs:
     - name: Set up Python 3
       uses: actions/setup-python@v4
       with:
-        python-version: "3.x"
+        python-version: "3.10"
     - uses: actions/checkout@v3
       with:
         submodules: false
