github/workflows: Run mpy-format CI when tests and examples change.
Signed-off-by: Damien George <damien@micropython.org>

--- a/.github/workflows/mpy_format.yml
+++ b/.github/workflows/mpy_format.yml
@@ -5,6 +5,8 @@ on:
   pull_request:
     paths:
       - '.github/workflows/*.yml'
+      - 'examples/**'
+      - 'tests/**'
       - 'tools/**'
 
 jobs:
