Add MDNS support to Pico W
This adds both cpy-MAC.local and circuitpython.local support.

Fixes #7214

--- a/ports/raspberrypi/Makefile
+++ b/ports/raspberrypi/Makefile
@@ -47,6 +47,7 @@ SRC_SDK_CYW43 := \
 
 SRC_LWIP := \
 	shared/netutils/netutils.c \
+	$(wildcard lib/lwip/src/apps/mdns/*.c) \
 	$(wildcard lib/lwip/src/core/*.c) \
 	$(wildcard lib/lwip/src/core/ipv4/*.c) \
 	lib/lwip/src/netif/ethernet.c \
