--- a/.gitmodules
+++ b/.gitmodules
@@ -312,10 +312,12 @@
 	url = https://github.com/adafruit/esp32-camera/
 [submodule "ports/raspberrypi/lib/cyw43-driver"]
 	path = ports/raspberrypi/lib/cyw43-driver
-	url = https://github.com/georgerobotics/cyw43-driver.git
+	url = https://github.com/adafruit/cyw43-driver.git
+	branch = circuitpython8
 [submodule "ports/raspberrypi/lib/lwip"]
 	path = ports/raspberrypi/lib/lwip
-	url = https://github.com/lwip-tcpip/lwip.git
+	url = https://github.com/adafruit/lwip.git
+	branch = circuitpython8
 [submodule "lib/mbedtls"]
 	path = lib/mbedtls
 	url = https://github.com/ARMmbed/mbedtls.git
