.gitignore: Add section for IDE config files.
This adds a section to ignore config files for IDEs not used by the core
developers. This is helpful for e.g. vscode users so that their config
files don't get in the way of committing fixes.

Signed-off-by: Laurens Valk <laurens@pybricks.com>

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ genrst/
 # MacOS desktop metadata files
 ######################
 .DS_Store
+
+# IDE configuration files
+######################
+.vscode/
