--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# This .gitignore file is intended to be minimal.
+#
+# If you find that you need additional rules, such as IDE temporary
+# files, please do so either via a global .gitignore file (registered
+# with core.excludesFile), or by adding private repository-specific
+# rules to .git/info/exclude.  See https://git-scm.com/docs/gitignore
+# for more information.
+
 # Build directories
 build/
 build-*/
