--- a/.gitmodules
+++ b/.gitmodules
@@ -310,6 +310,7 @@
 [submodule "ports/espressif/esp32-camera"]
 	path = ports/espressif/esp32-camera
 	url = https://github.com/adafruit/esp32-camera/
+        branch = circuitpython
 [submodule "ports/raspberrypi/lib/cyw43-driver"]
 	path = ports/raspberrypi/lib/cyw43-driver
 	url = https://github.com/adafruit/cyw43-driver.git
