--- a/.github/workflows/js-port-v9.yml
+++ b/.github/workflows/js-port-v9.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
