--- a/.github/workflows/merge-to-js.yml
+++ b/.github/workflows/merge-to-js.yml
@@ -5,7 +5,7 @@ on:
       - 'master'
 jobs:
   merge-branch:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Wait for Unix port build to succeed
         uses: fountainhead/action-wait-for-check@v1.0.0
