--- a/.github/workflows/stm32_port.yml
+++ b/.github/workflows/stm32_port.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         board: [STM32F7DISC]
