ports/esp32/Makefile: Now supports BOARD_DIR.
In order to support BOARD_DIR, the underlying CMakeLists.txt
now accepts relative path for BOARD_DIR.

--- a/ports/esp32/CMakeLists.txt
+++ b/ports/esp32/CMakeLists.txt
@@ -13,6 +13,10 @@ endif()
 # Set the board directory and check that it exists.
 if(NOT MICROPY_BOARD_DIR)
     set(MICROPY_BOARD_DIR ${MICROPY_PORT_DIR}/boards/${MICROPY_BOARD})
+else()
+    if(NOT IS_ABSOLUTE "${MICROPY_BOARD_DIR}")
+        set(MICROPY_BOARD_DIR "${MICROPY_PORT_DIR}/${MICROPY_BOARD_DIR}")
+    endif()
 endif()
 if(NOT EXISTS ${MICROPY_BOARD_DIR}/mpconfigboard.cmake)
     message(FATAL_ERROR "Invalid MICROPY_BOARD specified: ${MICROPY_BOARD}")
