ports/nrf: Add RTC support to NRF ports.
I've cobbled together an update to the NRF build that adds support for
the RTC and missing time methods (sleep, localtime, etc..). I don't
really understand the meat of the update, I've mostly lifted it from
Circuitpython but it compiles and appears to work.

I'm sure there are a number of things that I didn't do correctly,
however I figured having a working PR to start with might make it
easier to get the update in place.

Signed-off-by: RetiredWizard <github@retiredwizard.com>

--- a/ports/nrf/Makefile
+++ b/ports/nrf/Makefile
@@ -76,6 +76,7 @@ INC += -I./modules/board
 INC += -I./modules/nrf
 INC += -I../../shared/readline
 INC += -I./drivers/bluetooth
+INC += -I./drivers/bluetooth/s140_nrf52_6.1.1/s140_nrf52_6.1.1_API/include
 INC += -I./drivers
 INC += -I../../lib/nrfx/
 INC += -I../../lib/nrfx/drivers
@@ -280,6 +281,7 @@ SRC_C += \
 	gccollect.c \
 	pin_named_pins.c \
 	fatfs_port.c \
+	machine_rtc.c \
 	drivers/flash.c \
 	drivers/rng.c \
 	drivers/softpwm.c \
