windows/msvc: Remove variant suffix from executable filename.
This is in line with the change made for other ports in d53c3b6a: since
the default output directory already includes the variant name in it
there's no need to add it to the executable as well.

--- a/ports/windows/msvc/common.props
+++ b/ports/windows/msvc/common.props
@@ -6,6 +6,7 @@
   <PropertyGroup>
     <PyVariant Condition="'$(PyVariant)' == ''">standard</PyVariant>
     <PyBuild Condition="'$(PyBuild)' == ''">build-$(PyVariant)</PyBuild>
+    <PyProg Condition="'$(PyProg)' == ''">micropython</PyProg>
   </PropertyGroup>
   <ImportGroup Label="PropertySheets">
     <Import Project="paths.props" Condition="'$(PyPathsIncluded)' != 'True'"/>
